--- a/thesis/4-effects_in_practise.tex
+++ b/thesis/4-effects_in_practise.tex
@@ -16,8 +16,8 @@ Związana z językiem OCaml jest inicjatywa ocaml-multicore\footnote{\url{https:
 
 Badania nad efektami i uchwytami przyczyniły się także do powstania kilku eksperymentalnych języków programowania w których efekty i uchwyty są obywatelami pierwszej kategorii. Do języków tych należą:
 \begin{itemize}
-\item Eff\footnote{\url{https://www.eff-lang.org/}} -- powstający z inicjatywy Andreja Bauera and Matija Pretnara język o ML-podobnej składni,
-\item Frank\footnote{\url{https://github.com/frank-lang/frank}} \cite{DBLP:journals/corr/LindleyMM16} -- pod przewodnictwem Sama Lindley'a, Conora McBride'a oraz Craiga McLaughlin'a projektowany z tęsknoty do ML'a, a jednocześnie upodobania do Haskell-owej dyscypliny,
+\item Eff\footnote{\url{https://www.eff-lang.org/}} -- powstający z inicjatywy Andreja Bauera i Matija Pretnara język o ML-podobnej składni,
+\item Frank\footnote{\url{https://github.com/frank-lang/frank}} \cite{DBLP:journals/corr/LindleyMM16} -- pod przewodnictwem Sama Lindley'a, Conora McBride'a oraz Craiga McLaughlin'a, projektowany z tęsknoty do ML'a, a jednocześnie upodobania do Haskell-owej dyscypliny,
 \item Koka\footnote{\url{https://github.com/koka-lang/koka}} -- kierowany przez Daana Leijena z Microsoft projekt badawczy; Koka ma składnię inspirowaną JavaScriptem,
 \item Helium\footnote{\url{https://bitbucket.org/pl-uwr/helium/src/master/}} \cite{biernacki2019abstracting} -- powstały w Instytucie Informatyki Uniwersytetu Wrocławskiego, z ML-podobnym systemem modułów i lekkimi naleciałościami z Haskella.
 \end{itemize}
@@ -26,13 +26,13 @@ Badania nad efektami i uchwytami przyczyniły się także do powstania kilku eks
 
 \lstset{language=Haleff, showstringspaces=false}
 
-Używając właśnie języka Helium, zobaczymy jak w praktyce wygląda programowanie z efektami algebraicznymi oraz uchwytami, zaś w następnym rozdziale spróbujemy zaimplementować wyniki uzyskane w ,,Build systems {\`a} la carte'' \cite{mokhov2018build, mokhov2020build}. Po raz pierwszy Helium pojawia się w \cite{biernacki2019abstracting}, służąc za narzędzie do eksperymentowania i umożliwienia konstrukcji bardziej skomplikowanych przykładów oraz projektów w celu przetestowania efektów i uchwytów w praktyce.
+Używając właśnie języka Helium zobaczymy, jak w praktyce wygląda programowanie z efektami algebraicznymi oraz uchwytami, zaś w następnym rozdziale spróbujemy zaimplementować wyniki uzyskane w ,,Build systems {\`a} la carte'' \cite{mokhov2018build, mokhov2020build}. Po raz pierwszy Helium pojawia się w \cite{biernacki2019abstracting}, służąc za narzędzie do eksperymentowania i umożliwienia konstrukcji bardziej skomplikowanych przykładów oraz projektów w celu przetestowania efektów i uchwytów w praktyce.
 
-Rozważmy przykład prostego programu napisanego w Helium, w którym definiujemy pomocniczą funkcję \inl{is_negative} ustalającą czy liczba jest ujemna oraz \inl{question}, która pyta użytkownika o liczbę i informuje czy liczba ta jest ujemna:
+Rozważmy przykład prostego programu napisanego w Helium, w którym definiujemy pomocniczą funkcję \inl{is_negative} ustalającą, czy liczba jest ujemna oraz funkcję \inl{question}, która pyta użytkownika o liczbę i informuje, czy liczba ta jest ujemna:
 
 \lstinputlisting{code_examples/syntax.he}
 
-Sygnatura funkcji \inl{is_negative} wyznaczona przez system typów Helium, to jak łatwo się domyśleć \inl{Int -> Bool}. Gdy jednak zapytamy środowisko uruchomieniowe o typ funkcji \inl{question} otrzymamy interesującą sygnaturę \inl{Unit ->[IO] Unit}. W Helium, informacje o efektach występujących w trakcie obliczania funkcji są umieszczone w sygnaturach funkcji w kwadratowych nawiasach. W przypadku funkcji \inl{question}, jej obliczenie powoduje wystąpienie efektu ubocznego związanego z mechanizmem wejścia/wyjścia. 
+Sygnatura funkcji \inl{is_negative} wyznaczona przez system typów Helium -- to jak łatwo się domyślić -- \inl{Int -> Bool}. Gdy jednak zapytamy środowisko uruchomieniowe o typ funkcji \inl{question} otrzymamy interesującą sygnaturę \inl{Unit ->[IO] Unit}. W Helium informacje o efektach występujących w trakcie obliczania funkcji są umieszczone w sygnaturach funkcji w kwadratowych nawiasach. W przypadku funkcji \inl{question}, jej obliczenie powoduje wystąpienie efektu ubocznego związanego z mechanizmem wejścia/wyjścia. 
 
 \begin{lstlisting}
 printStr: String ->[IO] Unit
@@ -50,15 +50,15 @@ Efekty \inl{IO} oraz \inl{RE} (runtime error) są szczególne, gdyż są dla nic
 
 \subsection{Błąd}
 
-Zaimplementujemy kilka efektów ubocznych, zaczynając od efektu błędu, wraz z uchwytami dla nich. W Helium, efekt oraz powodujące go operacje definiuje się następująco:
+Zaimplementujemy kilka efektów ubocznych, zaczynając od efektu błędu, wraz z uchwytami dla nich. W Helium efekt oraz powodujące go operacje definiuje się następująco:
 
 \lstinputlisting{code_examples/error1__signature.he}
 
-Stwórzmy funkcję podobną do \inl{question}, z tym że nie będzie ona lubić wartości ujemnych:
+Stwórzmy funkcję podobną do \inl{question} z tym, że nie będzie ona ,,lubić'' wartości ujemnych:
 
 \lstinputlisting[firstline=7, lastline=18]{code_examples/error2__inline_abort.he}
 
-Zdefiniowaliśmy efekt uboczny \inl{Error} wraz z operacją \inl{error}, która go powoduje. Operacja ta jest parametryzowana wartością typu \inl{Unit}, a jej (możliwy) wynik to także wartość z \inl{Unit}. Definiujemy też funkcję \inl{main} w której wywołujemy \inl{no\_negatives\_question}. Jednakże obliczenie wykonujemy w uchwycie, w którym definiujemy co ma się wydarzyć, gdy w czasie obliczenia wystąpi efekt błędu spowodowany operacją \inl{error}. W tym przypadku mówimy, że będzie skutkowało wypisaniem wiadomości na standardowe wyjście. Nie wznawiamy obliczenia, stąd wystąpienie błędu skutkuje zakończeniem nadzorowanego obliczenia. Jeśli uruchomimy teraz program i podamy ujemną liczbę, zakończy się on komunikatem zdefiniowanym w uchwycie, a tekst ,,Question finished'' nie zostanie wypisany. Zgodnie z oczekiwaniami -- obliczenie \inl{no\_negatives\_question} nie zostało kontynuowane po wystąpieniu błędu.
+Zdefiniowaliśmy efekt uboczny \inl{Error} wraz z operacją \inl{error}, która go powoduje. Operacja ta jest parametryzowana wartością typu \inl{Unit}, a jej (możliwy) wynik to także wartość z \inl{Unit}. Definiujemy też funkcję \inl{main}, w której wywołujemy \inl{no\_negatives\_question}. Jednakże obliczenie wykonujemy w uchwycie, w którym definiujemy co ma się wydarzyć, gdy w czasie obliczenia wystąpi efekt błędu spowodowany operacją \inl{error}. W tym przypadku mówimy, że będzie to skutkowało wypisaniem wiadomości na standardowe wyjście. Nie wznawiamy obliczenia, stąd wystąpienie błędu skutkuje zakończeniem nadzorowanego obliczenia. Jeśli uruchomimy teraz program i podamy ujemną liczbę, zakończy się on komunikatem zdefiniowanym w uchwycie, a tekst ,,Question finished'' nie zostanie wypisany. Zgodnie z oczekiwaniami -- obliczenie \inl{no\_negatives\_question} nie zostało kontynuowane po wystąpieniu błędu.
 
 Jeśli pewnego uchwytu zamierzamy używać wiele razy, możemy przypisać mu identyfikator -- w Helium uchwyty są wartościami:
 
@@ -68,7 +68,7 @@ zmodyfikujmy funkcję \inl{main} by korzystać ze zdefiniowanego uchwytu:
 
 \lstinputlisting[firstline=12, lastline=13]{code_examples/error3__reused_handler.he}
 
-Na potrzeby przykładu, możemy rozważyć spokojniejszy uchwyt dla wystąpień \inl{error}, który wypisze ostrzeżenie o wystąpieniu błędu ale będzie kontynuował obliczenie:
+Na potrzeby przykładu możemy rozważyć ,,spokojniejszy'' uchwyt dla wystąpień \inl{error}, który wypisze ostrzeżenie o wystąpieniu błędu ale będzie kontynuował obliczenie:
 
 \lstinputlisting[firstline=7, lastline=10]{code_examples/error4__warn_not_abort.he}
 
@@ -80,9 +80,9 @@ Powróćmy do problemu, który w rozdziale drugim był inspiracją do rozważani
 
 \lstinputlisting[lastline=22]{code_examples/nondet1__simple.he}
 
-Będziemy sprawdzać czy formuła wyrażona za pomocą funkcji \inl{formula1} jest spełnialna. W tym celu w \inl{main}, wewnątrz uchwytu, niedeterministycznie ustalamy wartości zmiennych \inl{x}, \inl{y}, \inl{z} po czym obliczamy wartość \inl{formula1}. Wartość obsługiwanego wyrażenia, którą przypisujemy do zmiennej \inl{ret}, jest następnie wykorzystana do wypisania komunikatu. Ponadto -- w celu demonstracji możliwości języka -- w uchwytach zamiast kontynuować obliczenie używając \inl{resume}, przypisujemy kontynuacji nazwę \inl{r}.
+Będziemy sprawdzać, czy formuła wyrażona za pomocą funkcji \inl{formula1} jest spełnialna. W tym celu w \inl{main} -- wewnątrz uchwytu -- niedeterministycznie ustalamy wartości zmiennych \inl{x}, \inl{y}, \inl{z}, po czym obliczamy wartość \inl{formula1}. Wartość obsługiwanego wyrażenia, którą przypisujemy do zmiennej \inl{ret}, jest następnie wykorzystana do wypisania komunikatu. Ponadto -- w celu demonstracji możliwości języka -- w uchwytach zamiast kontynuować obliczenie używając \inl{resume}, przypisujemy kontynuacji nazwę \inl{r}.
 
-W Helium, uchwyty mogą posiadać przypadki nie tylko dla operacji związanych z jakimś efektem ale także dwa specjalne: \inl{return} oraz \inl{finally}. Pierwszy jest wykonywany, gdy obliczenie pod kontrolą uchwytu kończy się zwracając wynik. Przypadek \inl{return} jako argument otrzymuje wynik obliczenia. Zaś \inl{finally} otrzymuje jako argument obliczenie obsługiwane przez uchwyt i jest uruchamiane na początku działania uchwytu. Domyślnie przypadki te są zaimplementowane jako:
+W Helium uchwyty mogą posiadać przypadki nie tylko dla operacji związanych z jakimś efektem ale także dwa specjalne: \inl{return} oraz \inl{finally}. Pierwszy jest wykonywany, gdy obliczenie pod kontrolą uchwytu kończy się zwracając wynik. Przypadek \inl{return} jako argument otrzymuje wynik obliczenia. Zaś \inl{finally} otrzymuje jako argument obliczenie obsługiwane przez uchwyt i jest uruchamiane na początku działania uchwytu. Domyślnie przypadki te są zaimplementowane jako:
 
 \begin{lstlisting}
 handler
@@ -95,7 +95,7 @@ Możemy je jednak sprytnie wykorzystać. Przykładowo, zamiast tylko sprawdzać 
 
 \lstinputlisting[firstline=5, lastline=16]{code_examples/nondet2__count_sats.he}
 
-Gdy obliczenie się kończy, zamiast zwracać czy formuła jest spełniona zwracamy 1 albo 0, w zależności czy formuła przy aktualnym wartościowaniu jest spełniona. Gdy obsługujemy niedeterministyczny wybór, kontynuujemy obliczenie dla obu możliwych wartości boolowskich po czym dodajemy wyniki. Wykorzystując \inl{finally} możemy włączyć komunikat o liczbie wartościowań do uchwytu:
+Gdy obliczenie się kończy -- zamiast zwracać, czy formuła jest spełniona -- zwracamy 1 albo 0, w zależności, czy formuła przy aktualnym wartościowaniu jest spełniona. Gdy obsługujemy niedeterministyczny wybór, kontynuujemy obliczenie dla obu możliwych wartości boolowskich po czym dodajemy wyniki. Wykorzystując \inl{finally} możemy włączyć komunikat o liczbie wartościowań do uchwytu:
 
 \lstinputlisting[firstline=5, lastline=17]{code_examples/nondet3__count_and_write_sats.he}
 
@@ -112,19 +112,19 @@ handler
 end
 \end{lstlisting}
 
-Wartość obliczenia, zamiast być jego wynikiem, jest funkcją. Co za tym idzie, w tym uchwycie kontynuacje nie będą funkcjami zwracającymi wartości lecz funkcje. W ten sposób możemy parametryzować dalsze obliczenia nie tylko wartościami zwracanymi przez operacje (zgodnie z ich sygnaturą) ale także wymyślonymi przez nas -- autorów uchwytu. Zauważmy jednak, że parametr ten nie jest widoczny w obsługiwanym obliczeniu, a jedynie w uchwycie. Co więcej, skoro wynik obsługiwanego obliczenia jest teraz funkcją, a nie wartością to by użytkownik uchwytu nie zauważył niezgodności typów musimy funkcję tą uruchomić z jakimś parametrem -- tutaj właśnie przychodzi naturalny moment na wykorzystanie konstrukcji \inl{finally}.
+Wartość obliczenia, zamiast być jego wynikiem, jest funkcją. Co za tym idzie, w tym uchwycie kontynuacje nie będą funkcjami zwracającymi wartości, lecz funkcje. W ten sposób możemy parametryzować dalsze obliczenia nie tylko wartościami zwracanymi przez operacje (zgodnie z ich sygnaturą), ale także wymyślonymi przez nas -- autorów uchwytu. Zauważmy jednak, że parametr ten nie jest widoczny w obsługiwanym obliczeniu, a jedynie w uchwycie. Co więcej, skoro wynik obsługiwanego obliczenia jest teraz funkcją, a nie wartością, to -- by użytkownik uchwytu nie zauważył niezgodności typów -- musimy funkcję tą uruchomić z jakimś parametrem. Tutaj właśnie przychodzi naturalny moment na wykorzystanie konstrukcji \inl{finally}.
 
 Definiujemy efekt stanu z operacją jego odczytu oraz modyfikacji:
 
 \lstinputlisting[lastline=3]{code_examples/state1__basics.he}
 
-Efekt jak i operacje są polimorficzne ze względu na typ wartości stanu. Zdefiniujemy teraz standardowy uchwyt dla efektu stanu. Skorzystamy z faktu, że uchwyty są w Helium wartościami, stąd w szczególności mogą być wynikiem funkcji. Funkcja ta będzie u nas parametryzowana wartością początkową stanu:
+Efekt, jak i operacje są polimorficzne ze względu na typ wartości stanu. Zdefiniujemy teraz standardowy uchwyt dla efektu stanu. Skorzystamy z faktu, że uchwyty są w Helium wartościami, stąd w szczególności mogą być wynikiem funkcji. Funkcja ta będzie u nas parametryzowana wartością początkową stanu:
 
 \lstinputlisting[firstline=5, lastline=11]{code_examples/state1__basics.he}
 
-Gdy obliczenie się kończy, zamiast wartość, zwracamy funkcję która ignoruje argument (będzie nim bieżąca wartością stanu), a zwraca właściwy wynik obliczenia. W konsekwencji przypadki dla operacji też muszą być funkcjami. Dla \inl{put} nie musimy odczytywać aktualnej wartości stanu, stąd wartość tą ignorujemy. Obliczenie wznawiamy z wartością jednostkową. Jak jednak wiemy, wynikiem będzie nie zwykła wartość lecz funkcja, której u nas dajemy wartość stanu. Stąd podajemy jej nowy stan, którym parametryzowana była operacja \inl{put}. W przypadku \inl{get} postępujemy podobnie -- jednak tym razem odczytamy argument funkcji i przekażemy go do kontynuacji. Niezmiennie kontynuacja zwraca funkcję, której przekażemy aktualną wartość stanu. Pozostaje rozstrzygnąć co zrobić w przypadku \inl{finally}. Skoro jednak przerobiliśmy obliczenie ze zwracającego wartość do takiego, które zwraca funkcję oczekującą wartości stanu, to możemy podać mu wartość początkową -- określoną przez użytkownika uchwytu.
+Gdy obliczenie się kończy, zamiast wartość zwracamy funkcję, która ignoruje argument (będzie nim bieżąca wartością stanu), a zwraca właściwy wynik obliczenia. W konsekwencji przypadki dla operacji też muszą być funkcjami. Dla \inl{put} nie musimy odczytywać aktualnej wartości stanu, stąd wartość tą ignorujemy. Obliczenie wznawiamy z wartością jednostkową. Jak jednak wiemy, wynikiem nie będzie zwykła wartość, lecz funkcja, której u nas dajemy wartość stanu. Stąd podajemy jej nowy stan, którym parametryzowana była operacja \inl{put}. W przypadku \inl{get} postępujemy podobnie -- jednak tym razem odczytamy argument funkcji i przekażemy go do kontynuacji. Niezmiennie kontynuacja zwraca funkcję, której przekażemy aktualną wartość stanu. Pozostaje rozstrzygnąć, co zrobić w przypadku \inl{finally}. Skoro jednak przerobiliśmy obliczenie ze zwracającego wartość do takiego, które zwraca funkcję oczekującą wartości stanu, to możemy podać mu wartość początkową -- określoną przez użytkownika uchwytu.
 
-Jeśli chcemy aby obliczenie zwracało nie tylko wartość wynikową ale także końcowy stan, wystarczy że zmodyfikujemy przypadek dla \inl{return}:
+Jeśli chcemy, aby obliczenie zwracało nie tylko wartość wynikową, ale także końcowy stan, wystarczy że zmodyfikujemy przypadek dla \inl{return}:
 
 \lstinputlisting[firstline=5, lastline=11]{code_examples/state2__run_state.he}
 
@@ -134,7 +134,7 @@ Dzięki zdefiniowanemu efektowi ubocznemu, operacjom oraz uchwytom możemy teraz
 
 \subsection{Efekt rekursji}
 
-W niektórych językach ML-podobnych (jak na przykład OCaml czy Helium) chcąc by w ciele definicji funkcji był widoczny jej identyfikator, trzeba zadeklarować ją używając słów kluczowych \inl{let rec}:
+W niektórych językach ML-podobnych (jak na przykład OCaml czy Helium) chcąc, by w ciele definicji funkcji był widoczny jej identyfikator, trzeba zadeklarować ją używając słów kluczowych \inl{let rec}:
 
 \lstinputlisting[firstline=2, lastline=5]{code_examples/rec1__rec.he}
 
@@ -142,23 +142,24 @@ Co ciekawe, dzięki własnym efektom i operacjom możemy tworzyć funkcje rekure
 
 \lstinputlisting[firstline=2, lastline=13]{code_examples/rec2__effect.he}
 
-Konstrukcja \inl{handle `a in ...} służy doprecyzowaniu który efekt ma być obsłużony przez uchwyt -- jest przydatna w przypadku niejednoznaczności gdy używamy wielu instancji tego samego efektu lub dla ułatwienia rozumienia kodu.
+Konstrukcja \inl{handle `a in ...} służy doprecyzowaniu, który efekt ma być obsłużony przez uchwyt -- jest przydatna w przypadku niejednoznaczności, gdy używamy wielu instancji tego samego efektu lub dla ułatwienia rozumienia kodu.
 
-Korzystając z efektu rekursji możemy także definiować funkcje wzajemnie rekurencyjne:
+Korzystając z efektu rekursji, możemy także definiować funkcje wzajemnie rekurencyjne:
 
 \lstinputlisting[firstline=5, lastline=23]{code_examples/rec3__mutual.he}
 
-Utrzymujemy informację, która funkcja jest aktualnie wykonywana i gdy prosi o wywołanie rekurencyjne uruchamiamy obliczanie drugiej funkcji po czym wynik przekazujemy do kontynuacji.
+Utrzymujemy informację, która funkcja jest aktualnie wykonywana i gdy prosi o wywołanie rekurencyjne, uruchamiamy obliczanie drugiej funkcji, po czym wynik przekazujemy do kontynuacji.
 
 % 
 % Może jeszcze współbieżność kooperatywna?
+%   (26.08.2020) może jednak nie :)
 % Byłaby naturalnym przedłużeniem wzajemnej rekursji
 % ale zawierałaby trochę szumu w postaci kolejkowania zadań.
-% 
+%
 
-\subsection{Wiele efektów na raz -- porażka i niedeterminizm}
+\subsection{Wiele efektów naraz -- porażka i niedeterminizm}
 
-Na koniec rozdziału, zobaczymy jak łatwo w Helium komponuje się efekty. Definiujemy efekty niedeterminizmu oraz porażki:
+Na koniec rozdziału zobaczymy jak łatwo w Helium komponuje się efekty. Definiujemy efekty niedeterminizmu oraz porażki:
 
 \lstinputlisting[firstline=1, lastline=5]{code_examples/fail_and_amb.he}
 
@@ -166,11 +167,11 @@ oraz bardzo proste uchwyty dla tych efektów:
 
 \lstinputlisting[firstline=7, lastline=15]{code_examples/fail_and_amb.he}
 
-Definiujemy teraz funkcję sprawdzającą czy otrzymana formuła z trzema zmiennymi wolnymi jest spełnialna:
+Definiujemy teraz funkcję sprawdzającą, czy otrzymana formuła z trzema zmiennymi wolnymi jest spełnialna:
 
 \lstinputlisting[firstline=19, lastline=25]{code_examples/fail_and_amb.he}
 
-Jeśli formuła przy ustalonym wartościowaniu nie jest spełniona powoduje efekt porażki. Zwróćmy uwagę w jakiej kolejności są umieszczone uchwyty -- niedeterminizmu na zewnątrz, zaś porażki wewnątrz. W ten sposób gdy wystąpi porażka, jej uchwyt zwróci fałsz, w wyniku czego nastąpi powrót do ostatniego punktu niedeterminizmu w którym jest jeszcze wybór. Dzięki temu wartość \inl{is\_sat f} jest równa fałszowi tylko gdy przy każdym wartościowaniu nastąpi porażka. Zobaczmy teraz funkcję sprawdzającą czy otrzymana formuła jest tautologią:
+Jeśli formuła przy ustalonym wartościowaniu nie jest spełniona, powoduje efekt porażki. Zwróćmy uwagę w jakiej kolejności są umieszczone uchwyty -- niedeterminizmu na zewnątrz, zaś porażki wewnątrz. W ten sposób, gdy wystąpi porażka, jej uchwyt zwróci fałsz, w wyniku czego nastąpi powrót do ostatniego punktu niedeterminizmu, w którym jest jeszcze wybór. Dzięki temu wartość \inl{is\_sat f} jest równa fałszowi tylko, gdy przy każdym wartościowaniu nastąpi porażka. Zobaczmy teraz funkcję sprawdzającą, czy otrzymana formuła jest tautologią:
 
 \lstinputlisting[firstline=27, lastline=33]{code_examples/fail_and_amb.he}
 
@@ -180,6 +181,6 @@ Tutaj uchwyt dla porażki znajduje się na zewnątrz -- wystąpienie porażki oz
 
 Z łatwością napisaliśmy program, który korzysta z wielu efektów ubocznych jednocześnie, mimo że żaden z nich (ani uchwyty) nie wiedzą o istnieniu drugiego. Łączenie efektów jest bardzo proste, a kolejność w jakiej umieszczamy uchwyty umożliwia nam łatwe i czytelne definiowanie zachowania programu w przypadku wystąpienie któregokolwiek z efektów.
 
-Dzięki językowi Helium, przyjrzeliśmy się z bliska efektom algebraicznym oraz uchwytom, zobaczyliśmy przykłady implementacji uchwytów oraz rozwiązań prostych problemów. Jesteśmy gotowi do podjęcia próby zaimplementowania systemów kompilacji z użyciem efektów i uchwytów -- czego dokonamy w następnym rozdziale.
+Dzięki językowi Helium przyjrzeliśmy się z bliska efektom algebraicznym oraz uchwytom, zobaczyliśmy przykłady implementacji uchwytów oraz rozwiązań prostych problemów. Jesteśmy gotowi do podjęcia próby zaimplementowania systemów kompilacji z użyciem efektów i uchwytów -- czego dokonamy w następnym rozdziale.
 
 \undef\inl
